fix contrast checker on discount price element

--- a/css/styles.css
+++ b/css/styles.css
@@ -319,7 +319,7 @@ section.best-sellers .product-slider .product .product-info .price {
 }
 
 section.best-sellers .product-slider .product .product-info .price .discounted-price {
-    color: #EC1C1C;
+    color: #A00D0D;
 }
 
 section.best-sellers .product-slider .product .product-info .price .original-price {
